[FEAT]: creazione titolo + descrizione

--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="./css/styles.css">
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Meet Our Team</title>
+        <link rel="stylesheet" href="./css/styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+    </head>
+    <body>
+        <!-- contenitore principale -->
+        <main class="container">
+            <!-- titolo -->
+            <h1>Meet Our Team</h1>
+            <p id="title-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque facilis corporis ullam perspiciatis nesciunt aut obcaecati mollitia dolore doloremque ratione dolorum aliquam alias necessitatibus cum enim, reiciendis placeat similique sapiente!</p>
+        </main>  
+    </body>
 </html>
