[FIX]: font-size (titolo + nomi cards) - es finito

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@700&display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- contenitore principale -->
@@ -26,7 +27,7 @@
                                 <img src="./img/male1.png" alt="foto-profilo-marco">
                             </div>
                             <div class="personal-info">
-                                <div class="name">MARCO BIANCHI</div>
+                                <div class="name">MARIO BIANCHI</div>
                                 <div class="role">Designer</div>
                                 <div class="mail">marcobianchi@team.com</div>
                             </div>
